--- a/HireManagement/HireManagement/HireManagement.csproj
+++ b/HireManagement/HireManagement/HireManagement.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <Compile Remove="Migrations\20200509104407_Extend_IdentityUser.cs" />
     <Compile Remove="Migrations\20200509104407_Extend_IdentityUser.Designer.cs" />
+    <Compile Remove="Migrations\20200613130936_ContractUltraUpdate.cs" />
+    <Compile Remove="Migrations\20200613130936_ContractUltraUpdate.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
